[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["麦旋风超好吃 <92409532+ricolxwz@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "*"
mkdocs-open-in-new-tab = "*"
mkdocs-glightbox = "*"
jieba = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"